# afk-vision

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh  status.sh  stop.sh
config/: celery.py  settings.py  urls.py
infra/local_inference/: Dockerfile  app.py  requirements.txt
scripts/: dev-down.sh  dev-status.sh  dev-up.sh
tests/: test_pipeline.py  test_providers.py  test_services.py
vision/: __init__.py  admin.py  api_urls.py  api_views.py  forms.py  models.py  providers.py  serializers.py  services.py  tasks.py  urls.py  views.py
vision/management/: __init__.py
vision/management/commands/: __init__.py  seed_demo.py
vision/migrations/: 0001_initial.py  0002_alter_embeddingrecord_embedding.py  __init__.py
vision/static/vision/: app.css  app.js
vision/templates/vision/: base.html  dashboard.html  project_detail.html
vision/templatetags/: __init__.py  vision_tags.py
